# db/sqlc/models.go
@@ -1,12 +1,23 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.27.0
+//   sqlc v1.31.1
 
 package db
 
 import (
+	"database/sql"
 	"time"
 )
+
+type Permission struct {
+	ID          int32          `json:"id"`
+	Name        string         `json:"name"`
+	Code        string         `json:"code"`
+	Description sql.NullString `json:"description"`
+	ParentID    sql.NullInt32  `json:"parent_id"`
+	CreatedAt   time.Time      `json:"created_at"`
+	UpdatedAt   time.Time      `json:"updated_at"`
+}
 
 type User struct {
 	ID        int32     `json:"id"`
@@ -15,4 +26,9 @@ type User struct {
 	Password  string    `json:"password"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type UserPermission struct {
+	UserID       int32 `json:"user_id"`
+	PermissionID int32 `json:"permission_id"`
 }
